[package]
name = "backstop_bootstrapper"
version = "1.1.0"
authors = ["Script3 Ltd. <gm@script3.io>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.5.0"
soroban-fixed-point-math = "1.0.0"
blend-contract-sdk = "1.0.0"

[dev_dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
blend-contract-sdk = { version = "1.0.0", features = ["testutils"] }

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-fixed-point-math]
version = "1.0.0"